--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <title>Database Practice</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='index.css'>
-        <script defer src='index.js'></script>
+        <script src='index.js' defer ></script>
     </head>
     <body class="body">
         <div class="page-container">
