--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <title>Database Practice</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='index.css'>
-        <script src='index.js' defer ></script>
+        <script src='index.js' type="module" defer ></script>
     </head>
     <body class="body">
         <div class="page-container">
@@ -26,7 +26,7 @@
                         <br><br>
                         <input type="text" id="main-input" name="main-input"/>
                         <br><br>
-                        <input type="submit" id="submit" onclick="logInput()"/>
+                        <input type="submit" id="submit" onclick="postEntry()"/>
                     </form>
                 </div>
             </div>
