--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
         <title>Database Practice</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='index.css'>
-        <script src='index.js' type="module" defer ></script>
+        <script src='index.js' defer></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script> -->
     </head>
     <body class="body">
         <div class="page-container">
