--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
             <div class="form-container">
                 <div>
                     <h1>Add to the database</h1>
-                        <form>
+                        <form id="main-form">
                         <label for="main-input">What do you want to sent to backend?</label>
                         <br><br>
                         <input type="text" id="main-input" name="main-input"/>
